--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -9,10 +9,10 @@
       ],
       "metadata": {
         "id": "TAnWF-3p1x2_",
-        "outputId": "38f35d9c-a069-4c02-b3a2-4952a9bbdbb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "38f35d9c-a069-4c02-b3a2-4952a9bbdbb8"
       },
       "id": "TAnWF-3p1x2_",
       "execution_count": 10,
@@ -78,10 +78,10 @@
       ],
       "metadata": {
         "id": "u51nzga5xoJg",
-        "outputId": "9d6ee62a-9c8e-447c-8695-583b77a0fa2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9d6ee62a-9c8e-447c-8695-583b77a0fa2a"
       },
       "id": "u51nzga5xoJg",
       "execution_count": 12,
@@ -2595,7 +2595,7 @@
         "    output_path = os.path.join(output_folder, file)\n",
         "    try:\n",
         "        initial_df = pd.read_csv(input_path)\n",
-        "        aqi_df = df.apply(calculate_aqi_row_with_severity, axis=1)\n",
+        "        aqi_df = initial_df.apply(calculate_aqi_row_with_severity, axis=1)\n",
         "        df_with_aqi = pd.concat([initial_df, aqi_df], axis=1)\n",
         "        df_with_aqi.to_csv(output_path, index=False)\n",
         "    except Exception as e:\n",
@@ -2603,28 +2603,28 @@
         "print(\"AQI Calculated\")"
       ],
       "metadata": {
-        "id": "ABwgCpmBRg2s",
-        "outputId": "06c25674-84bc-4463-c2ef-fdd616c66140",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84,
           "referenced_widgets": [
-            "4d1db721e1e04785b09c8c96eabac317",
-            "fb2b07e8acbd4b4b9ca3b76f14a8213d",
-            "36fa85b04d004d9083ba1618747fd7f1",
-            "d365f6414b71478181cd8b8f06df74d4",
-            "140ac9f3931d4a5ea8ec90732485c545",
-            "07242df8f3a84109876b7b974250e50b",
-            "5108cb51db984f71a3265db90b39339c",
-            "6e034dd3ca734fe1be5b225878f491c9",
-            "d1403bf0d1d74015aa45a5b8c3c3c5b4",
-            "011092bdb0344123ba82525535d92a14",
-            "62cde4f7adf441b4859159d824edc4a1"
+            "0b100332a041414ea1945e5da24affb0",
+            "7eba6c5422d442ba8f8ff8591a6f1554",
+            "67da481ad384406b90623aa4e8016907",
+            "14af218934da46648303702dee487ef2",
+            "f2fc7f3a48254a2d942b70a978f9a0e7",
+            "2c1e6dc4d48b434dbe41c2b0d21e0f83",
+            "5fcce06bf2b34b328d3b9fbb5ee5c54b",
+            "e59d149c222e4d74a7c24a1e70e1a34e",
+            "6579f1c6cc2d4563aba146815fe85126",
+            "af2c775513f545e4ab0d7e2179476de2",
+            "8a2faeb877ed46aab5d9e25a82fdece2"
           ]
-        }
+        },
+        "id": "ABwgCpmBRg2s",
+        "outputId": "487871d7-ae2e-41d4-fe41-eb23b2ee1b7d"
       },
       "id": "ABwgCpmBRg2s",
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -2642,7 +2642,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "4d1db721e1e04785b09c8c96eabac317"
+              "model_id": "0b100332a041414ea1945e5da24affb0"
             }
           },
           "metadata": {}
@@ -2651,7 +2651,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Unwanted rows removed\n"
+            "AQI Calculated\n"
           ]
         }
       ]
@@ -5074,7 +5074,7 @@
             "description_width": ""
           }
         },
-        "4d1db721e1e04785b09c8c96eabac317": {
+        "0b100332a041414ea1945e5da24affb0": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -5089,14 +5089,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_fb2b07e8acbd4b4b9ca3b76f14a8213d",
-              "IPY_MODEL_36fa85b04d004d9083ba1618747fd7f1",
-              "IPY_MODEL_d365f6414b71478181cd8b8f06df74d4"
+              "IPY_MODEL_7eba6c5422d442ba8f8ff8591a6f1554",
+              "IPY_MODEL_67da481ad384406b90623aa4e8016907",
+              "IPY_MODEL_14af218934da46648303702dee487ef2"
             ],
-            "layout": "IPY_MODEL_140ac9f3931d4a5ea8ec90732485c545"
+            "layout": "IPY_MODEL_f2fc7f3a48254a2d942b70a978f9a0e7"
           }
         },
-        "fb2b07e8acbd4b4b9ca3b76f14a8213d": {
+        "7eba6c5422d442ba8f8ff8591a6f1554": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -5111,13 +5111,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_07242df8f3a84109876b7b974250e50b",
+            "layout": "IPY_MODEL_2c1e6dc4d48b434dbe41c2b0d21e0f83",
             "placeholder": "​",
-            "style": "IPY_MODEL_5108cb51db984f71a3265db90b39339c",
+            "style": "IPY_MODEL_5fcce06bf2b34b328d3b9fbb5ee5c54b",
             "value": "Processing CSV files: 100%"
           }
         },
-        "36fa85b04d004d9083ba1618747fd7f1": {
+        "67da481ad384406b90623aa4e8016907": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -5133,15 +5133,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_6e034dd3ca734fe1be5b225878f491c9",
+            "layout": "IPY_MODEL_e59d149c222e4d74a7c24a1e70e1a34e",
             "max": 395,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_d1403bf0d1d74015aa45a5b8c3c3c5b4",
+            "style": "IPY_MODEL_6579f1c6cc2d4563aba146815fe85126",
             "value": 395
           }
         },
-        "d365f6414b71478181cd8b8f06df74d4": {
+        "14af218934da46648303702dee487ef2": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -5156,13 +5156,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_011092bdb0344123ba82525535d92a14",
+            "layout": "IPY_MODEL_af2c775513f545e4ab0d7e2179476de2",
             "placeholder": "​",
-            "style": "IPY_MODEL_62cde4f7adf441b4859159d824edc4a1",
-            "value": " 395/395 [03:22&lt;00:00,  1.15s/it]"
+            "style": "IPY_MODEL_8a2faeb877ed46aab5d9e25a82fdece2",
+            "value": " 395/395 [37:42&lt;00:00,  9.85s/it]"
           }
         },
-        "140ac9f3931d4a5ea8ec90732485c545": {
+        "f2fc7f3a48254a2d942b70a978f9a0e7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -5214,7 +5214,7 @@
             "width": null
           }
         },
-        "07242df8f3a84109876b7b974250e50b": {
+        "2c1e6dc4d48b434dbe41c2b0d21e0f83": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -5266,7 +5266,7 @@
             "width": null
           }
         },
-        "5108cb51db984f71a3265db90b39339c": {
+        "5fcce06bf2b34b328d3b9fbb5ee5c54b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -5281,7 +5281,7 @@
             "description_width": ""
           }
         },
-        "6e034dd3ca734fe1be5b225878f491c9": {
+        "e59d149c222e4d74a7c24a1e70e1a34e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -5333,7 +5333,7 @@
             "width": null
           }
         },
-        "d1403bf0d1d74015aa45a5b8c3c3c5b4": {
+        "6579f1c6cc2d4563aba146815fe85126": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -5349,7 +5349,7 @@
             "description_width": ""
           }
         },
-        "011092bdb0344123ba82525535d92a14": {
+        "af2c775513f545e4ab0d7e2179476de2": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -5401,7 +5401,7 @@
             "width": null
           }
         },
-        "62cde4f7adf441b4859159d824edc4a1": {
+        "8a2faeb877ed46aab5d9e25a82fdece2": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
