--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -12,19 +12,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "38f35d9c-a069-4c02-b3a2-4952a9bbdbb8"
+        "outputId": "1cb07051-d7f2-49f0-fd21-7981ff2ae4ed"
       },
       "id": "TAnWF-3p1x2_",
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (4.67.1)\n",
-            "Requirement already satisfied: opencage in /usr/local/lib/python3.11/dist-packages (3.2.0)\n",
+            "Collecting opencage\n",
+            "  Downloading opencage-3.2.0-py3-none-any.whl.metadata (7.9 kB)\n",
             "Requirement already satisfied: Requests>=2.31.0 in /usr/local/lib/python3.11/dist-packages (from opencage) (2.32.3)\n",
-            "Requirement already satisfied: backoff>=2.2.1 in /usr/local/lib/python3.11/dist-packages (from opencage) (2.2.1)\n",
+            "Collecting backoff>=2.2.1 (from opencage)\n",
+            "  Downloading backoff-2.2.1-py3-none-any.whl.metadata (14 kB)\n",
             "Requirement already satisfied: tqdm>=4.66.4 in /usr/local/lib/python3.11/dist-packages (from opencage) (4.67.1)\n",
             "Requirement already satisfied: certifi>=2024.07.04 in /usr/local/lib/python3.11/dist-packages (from opencage) (2025.6.15)\n",
             "Requirement already satisfied: aiohttp>=3.10.5 in /usr/local/lib/python3.11/dist-packages (from opencage) (3.11.15)\n",
@@ -32,12 +34,16 @@
             "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (1.3.2)\n",
             "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (25.3.0)\n",
             "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (1.7.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (6.4.4)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (6.6.3)\n",
             "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (0.3.2)\n",
             "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp>=3.10.5->opencage) (1.20.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from Requests>=2.31.0->opencage) (3.4.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from Requests>=2.31.0->opencage) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from Requests>=2.31.0->opencage) (2.4.0)\n",
+            "Downloading opencage-3.2.0-py3-none-any.whl (23 kB)\n",
+            "Downloading backoff-2.2.1-py3-none-any.whl (15 kB)\n",
+            "Installing collected packages: backoff, opencage\n",
+            "Successfully installed backoff-2.2.1 opencage-3.2.0\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.11/dist-packages (1.6.1)\n",
             "Requirement already satisfied: numpy>=1.19.5 in /usr/local/lib/python3.11/dist-packages (from scikit-learn) (2.0.2)\n",
             "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn) (1.15.3)\n",
@@ -67,7 +73,7 @@
         "id": "KAmjdWX6zJSl"
       },
       "id": "KAmjdWX6zJSl",
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -81,16 +87,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d6ee62a-9c8e-447c-8695-583b77a0fa2a"
+        "outputId": "249c60bb-ab4e-43ec-fd29-8dc3636eec97"
       },
       "id": "u51nzga5xoJg",
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -2067,7 +2073,6 @@
         "])"
       ],
       "metadata": {
-        "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -2143,37 +2148,43 @@
         "id": "DRTnioEE282I"
       },
       "id": "DRTnioEE282I",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "file_paths = ['CG003.csv']\n",
+        "file_paths = ['KA011.csv']\n",
         "folder_path = \"/content/drive/MyDrive/ML_Dataset/AQI_2010_2023/\"\n",
         "\n",
         "for path in file_paths:\n",
-        "  column_stats(pd.read_csv(folder_path + path), 'CO (mg/Nm3)', path)\n",
-        "  print(\"Stat complete\")"
+        "  column_stats(pd.read_csv(folder_path + path), 'RH (W/mt2)', path)\n",
+        "  print(\"Stat complete\")\n",
+        "\n",
+        "# Stats for file: DL037.csv\n",
+        "# Column: RH ()\n",
+        "# Range (excluding nulls): 99.20 - 0.82\n",
+        "# Average (excluding nulls): 62.81\n",
+        "# Stat complete"
       ],
       "metadata": {
         "id": "m_7JavHD0_BH",
-        "outputId": "26562e18-27a3-46ba-9893-ccb7e93b0868",
+        "outputId": "30c5f5d6-d318-4d75-b4d7-c36395df47d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "m_7JavHD0_BH",
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Stats for file: CG003.csv\n",
-            "Column: CO (mg/Nm3)\n",
-            "Range (excluding nulls): 2.97 - 0.19\n",
-            "Average (excluding nulls): 0.74\n",
+            "Stats for file: KA011.csv\n",
+            "Column: RH (W/mt2)\n",
+            "Range (excluding nulls): 97.33 - 2.00\n",
+            "Average (excluding nulls): 54.69\n",
             "Stat complete\n"
           ]
         }
@@ -2323,7 +2334,7 @@
         "collapsed": true
       },
       "id": "kH6ZLdo6FFRS",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2472,7 +2483,7 @@
         }
       },
       "id": "P1uVzBuYGOLL",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2624,7 +2635,7 @@
         "outputId": "487871d7-ae2e-41d4-fe41-eb23b2ee1b7d"
       },
       "id": "ABwgCpmBRg2s",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
