--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -1857,7 +1857,7 @@
       "cell_type": "code",
       "source": [
         "folder_path = \"/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/renamed_column/\"\n",
-        "required_columns = list(set(rename_map_aqi.values())) + list(set(rename_map_other.values()))\n",
+        "required_columns = list(set(rename_map_aqi.values()))\n",
         "missing_columns_report = []\n",
         "missing_dict = defaultdict(list)\n",
         "for file in tqdm(os.listdir(folder_path)):\n",
