--- a/data_enrich.ipynb
+++ b/data_enrich.ipynb
@@ -2186,6 +2186,7 @@
         "        initial_df = pd.read_csv(input_path)\n",
         "        aqi_df = initial_df.apply(calculate_aqi_row_with_severity, axis=1)\n",
         "        df_with_aqi = pd.concat([initial_df, aqi_df], axis=1)\n",
+        "        # TODO: remove column that calculate AQI\n",
         "        df_with_aqi.to_csv(output_path, index=False)\n",
         "    except Exception as e:\n",
         "        tqdm.write(f\"Error processing {file}: {e}\")\n",
@@ -2248,7 +2249,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Combine station_info and AQI data"
+        "Combine station_info and AQI data to get statewise data"
       ],
       "metadata": {
         "id": "HeEUe8IMEbB-"
