--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -2055,30 +2055,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# Main execution\n",
         "if __name__ == \"__main__\":\n",
-        "    # Initialize trainer\n",
-        "    trainer = AQIModelTrainer(data_path='/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/statewise_aqi/Andhra Pradesh_aqi.csv',models_dir='/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/models')\n",
+        "    models, results = main('/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/statewise_aqi/Andhra Pradesh_aqi.csv')\n",
+        "# # Main execution\n",
+        "# if __name__ == \"__main__\":\n",
+        "#     # Initialize trainer\n",
+        "#     trainer = AQIModelTrainer(data_path='/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/statewise_aqi/Andhra Pradesh_aqi.csv',models_dir='/content/drive/MyDrive/ML_Dataset/AQI_2010_2023_updated/models')\n",
         "\n",
-        "    # Run complete pipeline\n",
-        "    results = trainer.run_complete_pipeline()\n",
+        "#     # Run complete pipeline\n",
+        "#     results = trainer.run_complete_pipeline()\n",
         "\n",
-        "    # Example prediction\n",
-        "    print(\"\\n\" + \"=\" * 50)\n",
-        "    print(\"EXAMPLE PREDICTION\")\n",
-        "    print(\"=\" * 50)\n",
+        "#     # Example prediction\n",
+        "#     print(\"\\n\" + \"=\" * 50)\n",
+        "#     print(\"EXAMPLE PREDICTION\")\n",
+        "#     print(\"=\" * 50)\n",
         "\n",
-        "    # Make a sample prediction\n",
-        "    sample_prediction = predict_aqi(\n",
-        "        from_datetime='2024-01-01 00:00:00',\n",
-        "        to_datetime='2024-01-01 23:00:00',\n",
-        "        location_city='Tirupati',\n",
-        "        model_type='xgboost'\n",
-        "    )\n",
+        "#     # Make a sample prediction\n",
+        "#     sample_prediction = predict_aqi(\n",
+        "#         from_datetime='2024-01-01 00:00:00',\n",
+        "#         to_datetime='2024-01-01 23:00:00',\n",
+        "#         location_city='Tirupati',\n",
+        "#         model_type='xgboost'\n",
+        "#     )\n",
         "\n",
-        "    if sample_prediction is not None:\n",
-        "        print(\"\\nSample predictions:\")\n",
-        "        print(sample_prediction.head(10))"
+        "#     if sample_prediction is not None:\n",
+        "#         print(\"\\nSample predictions:\")\n",
+        "#         print(sample_prediction.head(10))"
       ],
       "metadata": {
         "id": "_G2p4cKE07lj",
